...
    ) {
        HubButton(
            icon = Icons.Default.Add,
            label = "Create",
            getSysFg = getSysFg,
            getPrimary = getPrimary,
            testTag = "create_custom_theme_button",
        ) {
            onCreate()
        }

        Box {
            HubButton(Icons.Default.DataUsage, "Data", getSysFg, getPrimary) {
...
